--- a/SINGLE_MARKER/tools/SAIGE/readme
+++ b/SINGLE_MARKER/tools/SAIGE/readme
@@ -1,3 +1,13 @@
- #./run_pipeline_saige.sh ../../toy_data/ SEX,AGE,PC1,PC2,PC3 SEX model1  1
+# how to run it:
+./run_pipeline_saige.sh ../../../toy_data/genotype ../../../toy_data/pheno_binary.txt  AGE,SEX, SEX PHENO quantitative
 
-#  ./run_pipeline_saige.sh /mnt/vast/hpc/gtosto_lab/GT_ADMIX/Basilio_08_19_2022/GWAS/PLINK_FILES/PRADI/ AGE,SEX SEX model1 1
+# Explanation
+
+./run_pipeline_saige.sh \			# main script
+../../../toy_data/genotype \			# genotype data
+../../../toy_data/pheno_binary.txt  \		# pheno data	
+AGE,SEX, \					# list of covariates
+SEX \						# binary covariates
+PHENO \						# target variable
+quantitative					# type of variable
+
