updated the gmmat and saige to take into account plink files for kinship and for dosage

--- a/SINGLE_MARKER/tools/GMMAT/readme
+++ b/SINGLE_MARKER/tools/GMMAT/readme
@@ -1,12 +1,13 @@
 # How to run the pipeline
 
-./run_pipeline_gmmat.sh ./ ../../../toy_data/genotype ../../../toy_data/genotype ../../../toy_data/pheno_binary.txt "PHENO ~ AGE + SEX" quantitative
+./run_pipeline_gmmat.sh ./ ../../../toy_data/input_kinship ../../../toy_data/input_dosage ../../../toy_data/pheno_binary.txt "PHENO ~ AGE + SEX" quantitative
 
 # explanation
 
 ./run_pipeline_gmmat.sh  \			# the main script
-./ ../../../toy_data/genotype \			# location of the genotype data for kinship
-../../../toy_data/genotype \			# location of the genotype data for sum stat
+./ \						# location of the working directory
+../../../toy_data/input_kinship \		# location of the genotype data for kinship
+../../../toy_data/input_dosage \		# location of the genotype (dosage)
 ../../../toy_data/pheno_binary.txt \		# location of pheno file
 "PHENO ~ AGE + SEX" \				# model selected
 quantitative					# type of pheno variable (quantitative or binary)	
