--- a/SINGLE_MARKER/tools/SAIGE/readme
+++ b/SINGLE_MARKER/tools/SAIGE/readme
@@ -1,5 +1,5 @@
 # how to run it:
- ./run_pipeline_saige.sh ../../../toy_data/input_kinship ../../../toy_data/input_dosage ../../../toy_data/pheno_binary.txt  AGE,SEX, SEX PHENO quantitative
+ ./run_pipeline_saige.sh ../../../toy_data/input_kinship ../../../toy_data/input_dosage ../../../toy_data/pheno_continue.txt COV1,COV2 COV1 PHENO quantitative
 
 # Explanation
 
@@ -7,8 +7,8 @@
 ../../../toy_data/input_kinship \		# kinship input
 ../../../toy_data/input_dosage \		# dosage input
 ../../../toy_data/pheno_binary.txt  \		# pheno data	
-AGE,SEX, \					# list of covariates
-SEX \						# binary covariates
+COV1,COV2, \					# list of covariates
+COV1 \						# binary covariates
 PHENO \						# target variable
 quantitative					# type of variable
 
